--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <title>Ceitha | Home</title>
   <link rel="stylesheet" href="CEITHA.CSS" />
 </head>
-<body>
+<body> <section class="hero">
+  <h1>We Build Websites That Work</h1>
+  <p>At Ceihta, we create digital tools that solve real business problems — from websites to custom systems.</p>
+  <a href="#contact" class="cta-button">Get a Free Consultation</a>
+</section>
+
   <!-- HEADER -->
   <header>
     <div class="logo">
