--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
     </div>
     <div class="hero-image"></div>
   </section>
+<section class="services">
+  <h2>What We Do</h2>
+  <div class="service-grid">
+    <div class="service">
+      <h3>Business Websites</h3>
+      <p>Professional websites for small and medium businesses that build trust and drive growth.</p>
+    </div>
+    <div class="service">
+      <h3>Custom Systems</h3>
+      <p>Inventory, booking, school management — we build systems to automate your work.</p>
+    </div>
+    <div class="service">
+      <h3>Affordable Packages</h3>
+      <p>Start from as low as KES 1,500. Fast delivery, excellent quality.</p>
+    </div>
+  </div>
+</section>
 
   <!-- ABOUT US SECTION -->
   <section class="about" id="about">
