--- a/index.html
+++ b/index.html
@@ -3,98 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ceitha | Home</title>
-  <link rel="stylesheet" href="CEITHA.CSS" />
+  <title>Ceihta | Smart Digital Tools</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body> <section class="hero">
-  <h1>We Build Websites That Work</h1>
-  <p>At Ceihta, we create digital tools that solve real business problems — from websites to custom systems.</p>
-  <a href="#contact" class="cta-button">Get a Free Consultation</a>
-</section>
+<body>
 
-  <!-- HEADER -->
+  <!-- Header -->
   <header>
-    <div class="logo">
-  <!-- HEADER -->
-      <img src="1749194050083.jpg" alt="Ceitha Logo" />
-    </div>
-    <nav class="navbar">
-      <a href="#hero" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
+    <h1>Ceihta</h1>
+    <nav>
+      <a href="#services">What We Do</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- HERO SECTION -->
-  <section class="hero" id="hero">
-    <div class="hero-content">
-      <h1>Elevate your online presence</h1>
-      <p>At Ceitha, we help brands grow through impactful digital experiences — from web design to branding and content.</p>
-      <a href="#services" class="btn">View Services</a>
-    </div>
-    <div class="hero-image"></div>
-  </section>
-<section class="services">
-  <h2>What We Do</h2>
-  <div class="service-grid">
-    <div class="service">
-      <h3>Business Websites</h3>
-      <p>Professional websites for small and medium businesses that build trust and drive growth.</p>
-    </div>
-    <div class="service">
-      <h3>Custom Systems</h3>
-      <p>Inventory, booking, school management — we build systems to automate your work.</p>
-    </div>
-    <div class="service">
-      <h3>Affordable Packages</h3>
-      <p>Start from as low as KES 1,500. Fast delivery, excellent quality.</p>
-    </div>
-  </div>
-</section>
-
-  <!-- ABOUT US SECTION -->
-  <section class="about" id="about">
-    <h2>About Us</h2>
-    <p>
-      <strong>Ceitha</strong> is a creative digital agency focused on empowering small and medium businesses through expert branding, modern website development, and compelling content. We believe that your online presence should reflect your unique voice and make a lasting impression. <br><br>
-      Our team blends strategy, design, and technology to build experiences that stand out — whether you're starting from scratch or looking to refresh your image. We’re more than a service provider; we’re your partner in growth.
-    </p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>We Build Websites That Work</h1>
+    <p>At Ceihta, we create digital tools that solve real business problems — from websites to custom systems.</p>
+    <a href="#contact" class="cta-button">Get a Free Consultation</a>
   </section>
 
-  <!-- SERVICES SECTION -->
-  <section class="services" id="services">
-    <h2>Our Services</h2>
-    <div class="service-list">
-      <div class="service-card">
-        <h3>Branding & Identity</h3>
-        <p>We craft visual and verbal branding that captures your values — logos, color palettes, typography, messaging, and brand guidelines.</p>
+  <!-- What We Do Section -->
+  <section id="services" class="services">
+    <h2>What We Do</h2>
+    <div class="service-grid">
+      <div class="service">
+        <h3>Business Websites</h3>
+        <p>Professional websites for small and medium businesses that build trust and drive growth.</p>
       </div>
-      <div class="service-card">
-        <h3>Website Design</h3>
-        <p>From elegant landing pages to complex business sites, we build fast, responsive, and visually stunning websites tailored to your goals.</p>
+      <div class="service">
+        <h3>Custom Systems</h3>
+        <p>Inventory, booking, school management — we build systems to automate your work.</p>
       </div>
-      <div class="service-card">
-        <h3>Content Creation</h3>
-        <p>We create engaging copy, blog posts, product descriptions, and social media content designed to connect with your audience and drive action.</p>
-      </div>
-      <div class="service-card">
-        <h3>Digital Strategy</h3>
-        <p>We consult on digital growth strategies, helping you reach your audience through SEO, analytics, and marketing campaigns.</p>
+      <div class="service">
+        <h3>Affordable Packages</h3>
+        <p>Start from as low as KES 1,500. Fast delivery, excellent quality.</p>
       </div>
     </div>
   </section>
 
-  <!-- FOOTER / CONTACT -->
-  <footer id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:ceitha@example.com">ceitha1717@gmail.com</a></p>
-    <p>Phone: +254 7-08-736-074</p>
-    <p>Location: Nairobi, Kenya </p>
-    <p>&copy; 2025 Ceitha. All rights reserved.</p>
+  <!-- Call to Action -->
+  <section id="contact" class="contact-cta">
+    <h2>Ready to Boost Your Business?</h2>
+    <p>Let’s create something amazing. Message us today.</p>
+    <a href="mailto:your@email.com" class="cta-button">Contact Us</a>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Ceihta. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
+
+
+     
+   
+  
+
+
 
 
 
