--- a/index.html
+++ b/index.html
@@ -2,69 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ceihta | Smart Digital Tools</title>
-  <link rel="stylesheet" href="CEITHA.CSS" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ceitha Digital</title>
+  <link rel="stylesheet" href="CEITHA.CSS">
 </head>
 <body>
-
-  <!-- Header -->
   <header>
-    <h1>Ceihta</h1>
+    <h1>Ceitha Digital</h1>
     <nav>
-      <a href="#services">What We Do</a>
+      <a href="#services">Services</a>
+      <a href="#value">Why Us</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>We Build Websites That Work</h1>
-    <p>At Ceihta, we create digital tools that solve real business problems — from websites to custom systems.</p>
-    <a href="#contact" class="cta-button">Get a Free Consultation</a>
+  <section class="hero-section">
+    <h2>Empowering Your Business with Digital Tools</h2>
+    <p>We build engaging, mobile-friendly websites and custom systems to help you reach more customers and work smarter.</p>
+    <a href="#contact" class="btn-primary">Get in Touch</a>
   </section>
 
-  <!-- What We Do Section -->
-  <section id="services" class="services">
-    <h2>What We Do</h2>
-    <div class="service-grid">
-      <div class="service">
-        <h3>Business Websites</h3>
-        <p>Professional websites for small and medium businesses that build trust and drive growth.</p>
-      </div>
-      <div class="service">
-        <h3>Custom Systems</h3>
-        <p>Inventory, booking, school management — we build systems to automate your work.</p>
-      </div>
-      <div class="service">
-        <h3>Affordable Packages</h3>
-        <p>Start from as low as KES 1,500. Fast delivery, excellent quality.</p>
-      </div>
-    </div>
+  <section id="services" class="content-section">
+    <h3>What We Offer</h3>
+    <ul>
+      <li><strong>Responsive Websites:</strong> Mobile-ready designs to showcase your brand.</li>
+      <li><strong>Custom Systems:</strong> From booking to inventory to school management.</li>
+      <li><strong>Maintenance & Support:</strong> Fast, reliable updates and fixes.</li>
+    </ul>
   </section>
 
-  <!-- Call to Action -->
-  <section id="contact" class="contact-cta">
-    <h2>Ready to Boost Your Business?</h2>
-    <p>Let’s create something amazing. Message us today.</p>
-    <a href="mailto:your@email.com" class="cta-button">Contact Us</a>
+  <section id="value" class="content-section">
+    <h3>Why Businesses Choose Us</h3>
+    <ul>
+      <li>✅ Affordable, transparent pricing</li>
+      <li>🚀 Fast delivery to meet your deadlines</li>
+      <li>📞 Ongoing support post-launch</li>
+    </ul>
   </section>
 
-  <!-- Footer -->
+  <section id="contact" class="content-section">
+    <h3>Ready to Grow?</h3>
+    <p>Connect with us to bring your business vision online.</p>
+    <a href="mailto:youremail@example.com" class="btn-primary">Email Us Now</a>
+  </section>
+
   <footer>
-    <p>&copy; 2025 Ceihta. All rights reserved.</p>
+    <p>&copy; 2025 Ceitha Digital. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
-
-
-     
-   
-  
-
-
-
-
-
-
