--- a/index.html
+++ b/index.html
@@ -2,52 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ceitha Digital</title>
-  <link rel="stylesheet" href="CEITHA.CSS">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ceitha | Home</title>
+  <link rel="stylesheet" href="ceitha.css" />
 </head>
 <body>
+  <!-- HEADER -->
   <header>
-    <h1>Ceitha Digital</h1>
-    <nav>
+    <div class="logo">
+  <!-- HEADER -->
+      <img src="1749194050083.jpg" alt="Ceitha Logo" />
+    </div>
+    <nav class="navbar">
+      <a href="#hero" class="active">Home</a>
+      <a href="#about">About</a>
       <a href="#services">Services</a>
-      <a href="#value">Why Us</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section class="hero-section">
-    <h2>Empowering Your Business with Digital Tools</h2>
-    <p>We build engaging, mobile-friendly websites and custom systems to help you reach more customers and work smarter.</p>
-    <a href="#contact" class="btn-primary">Get in Touch</a>
+  <!-- HERO SECTION -->
+  <section class="hero" id="hero">
+    <div class="hero-content">
+      <h1>Elevate your online presence</h1>
+      <p>At Ceitha, we help brands grow through impactful digital experiences — from web design to branding and content.</p>
+      <a href="#services" class="btn">View Services</a>
+    </div>
+    <div class="hero-image"></div>
   </section>
 
-  <section id="services" class="content-section">
-    <h3>What We Offer</h3>
-    <ul>
-      <li><strong>Responsive Websites:</strong> Mobile-ready designs to showcase your brand.</li>
-      <li><strong>Custom Systems:</strong> From booking to inventory to school management.</li>
-      <li><strong>Maintenance & Support:</strong> Fast, reliable updates and fixes.</li>
-    </ul>
+  <!-- ABOUT US SECTION -->
+  <section class="about" id="about">
+    <h2>About Us</h2>
+    <p>
+      <strong>Ceitha</strong> is a creative digital agency focused on empowering small and medium businesses through expert branding, modern website development, and compelling content. We believe that your online presence should reflect your unique voice and make a lasting impression. <br><br>
+      Our team blends strategy, design, and technology to build experiences that stand out — whether you're starting from scratch or looking to refresh your image. We’re more than a service provider; we’re your partner in growth.
+    </p>
   </section>
 
-  <section id="value" class="content-section">
-    <h3>Why Businesses Choose Us</h3>
-    <ul>
-      <li>✅ Affordable, transparent pricing</li>
-      <li>🚀 Fast delivery to meet your deadlines</li>
-      <li>📞 Ongoing support post-launch</li>
-    </ul>
+  <!-- SERVICES SECTION -->
+  <section class="services" id="services">
+    <h2>Our Services</h2>
+    <div class="service-list">
+      <div class="service-card">
+        <h3>Branding & Identity</h3>
+        <p>We craft visual and verbal branding that captures your values — logos, color palettes, typography, messaging, and brand guidelines.</p>
+      </div>
+      <div class="service-card">
+        <h3>Website Design</h3>
+        <p>From elegant landing pages to complex business sites, we build fast, responsive, and visually stunning websites tailored to your goals.</p>
+      </div>
+      <div class="service-card">
+        <h3>Content Creation</h3>
+        <p>We create engaging copy, blog posts, product descriptions, and social media content designed to connect with your audience and drive action.</p>
+      </div>
+      <div class="service-card">
+        <h3>Digital Strategy</h3>
+        <p>We consult on digital growth strategies, helping you reach your audience through SEO, analytics, and marketing campaigns.</p>
+      </div>
+    </div>
   </section>
 
-  <section id="contact" class="content-section">
-    <h3>Ready to Grow?</h3>
-    <p>Connect with us to bring your business vision online.</p>
-    <a href="mailto:youremail@example.com" class="btn-primary">Email Us Now</a>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Ceitha Digital. All rights reserved.</p>
+  <!-- FOOTER / CONTACT -->
+  <footer id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:ceitha@example.com">ceitha1717@gmail.com</a></p>
+    <p>Phone: +254 7-08-736-074</p>
+    <p>Location: Nairobi, Kenya </p>
+    <p>&copy; 2025 Ceitha. All rights reserved.</p>
   </footer>
 </body>
 </html>
