--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ceitha | Home</title>
-  <link rel="stylesheet" href="CEITHASS" />
+  <link rel="stylesheet" href="CEITHA.CSS" />
 </head>
 <body>
   <!-- HEADER -->
