--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   <footer id="contact">
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:ceitha@example.com">ceitha1717@gmail.com</a></p>
-    <p>Phone: +254 7-08-736-074</p>
+    <p>Phone: +254 7-08-736-074
+              +254 7-06-736-780</p>
     <p>Location: Nairobi, Kenya </p>
     <p>&copy; 2025 Ceitha. All rights reserved.</p>
   </footer>
